# random-seed-43

./: .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json
src/: notebook.ipynb  notebook.py
src/ffnn/: activations.py  initializers.py  layers.py  losses.py  model.py  regularizers.py
